--- a/generic.html
+++ b/generic.html
@@ -29,9 +29,9 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Re empleate</a></li>
-				<li class="active"><a href="generic.html">Sobre el programa</a></li>
-				<li><a href="iniciar.html">Iniciar Trabajo</a></li>
+				<li><a href="index.html">Situación Actual</a></li>
+				<li class="active"><a href="generic.html">Re empleate</a></li>
+				<li><a href="iniciar.html">Inscribete</a></li>
 			</ul>
 			<!--
 						<ul class="icons">
@@ -51,41 +51,20 @@
 				<header class="major">
 
 					<h1>Sobre el programa</h1>
-					<p>El "Programa Integral de Búsqueda de Empleo" de Re empleate es una iniciativa diseñada para
-						mejorar las oportunidades de empleo de los participantes. El programa incluye:
-					<ul style="text-align: left;">
-						<li><strong>Evaluación y Orientación Inicial:</strong> Diagnóstico del estado actual en la
-							búsqueda de empleo y definición de objetivos.
-						</li>
-						<li><strong>Desarrollo de Herramientas:</strong> Creación de CV de alto impacto y perfil de
-							LinkedIn, asesoría en imagen personal y comunicación efectiva.
-						</li>
-						<li><strong>Preparación para Entrevistas:</strong> Técnicas y prácticas para enfrentar
-							entrevistas de manera exitosa.
-						</li>
-						<li><strong>Estrategias de Búsqueda de Empleo:</strong> Uso de herramientas digitales y redes
-							para una búsqueda efectiva, incluyendo la aplicación de inteligencia artificial.
-						</li>
-						<li><strong>Apoyo Continuo:</strong> Sesiones de seguimiento y asesoría para garantizar el
-							progreso y adaptación a las necesidades del mercado laboral.
-						</li>
-					</ul>
-
-
-
-
-
-					Este programa está diseñado para ser integral y personalizado, asegurando que cada participante
+					<p>Este programa está diseñado para ser integral y personalizado, asegurando que cada participante
 					obtenga las habilidades y la confianza necesarias para lograr sus objetivos profesionales.</p>
 				</header>
-				<div class="image main"><img src="images/contenido.png" alt="" /></div>
-
-				<div class="image main"><img src="images/planificacion.png" alt="" /></div>
 
 
-				<div class="image main"><img src="images/aprenderas.png" alt="" /></div>
+				<div class="image main"><img src="images/contenido re empleate.png" alt="" /></div>
+
+				<div class="image main"><img src="images/calendario re empleate.png" alt="" /></div>
+
+
+				<div class="image main"><img src="images/aprenderas re empleate.png" alt="" /></div>
 
 				<h2>¿Estás list@ para comenzar?</h2>
+				<a href="iniciar.html" class="button">Inscribete</a>
 			</section>
 
 		</div>
