--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li class="active"><a href="index.html">Re empleate</a></li>
-				<li><a href="generic.html">Sobre el programa</a></li>
-				<li><a href="iniciar.html">Iniciar Trabajo</a></li>
+				<li class="active"><a href="index.html">Situación Actual</a></li>
+				<li><a href="generic.html">Re Empleate</a></li>
+				<li><a href="iniciar.html">Inscribete</a></li>
 			</ul>
 			<!--
 						<ul class="icons">
@@ -56,6 +56,32 @@
 
 		<!-- Main -->
 		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h2><span class="date">Situación actual</span>
+					</h2>
+					<p><strong>¿Estas buscando trabajo y estas viviendo alguna de estas situaciones?</strong></p>
+					<ul style="text-align: left;">
+						<li>No leen tu CV</li>
+						<li>Te llegan correos de no fuiste seleccionado y no sabes por qué.</li>
+						<li>Te pones muy nervioso en las entrevistas</li>
+						<li>Los entrevistadores son muy jóvenes y no logras explicar tu conocimiento.</li>
+						<li>El sueldo que te ofrecen es bajo.</li>
+						<li>Te dicen que estás sobre calificado.</li>
+						<li>Aceptas sueldos muy pequeños para no quedarte sin ingresos y trabajos temporales.</li>
+						<li>Te sientes desmotivado y no sabes qué hacer, ni dónde buscar una oportunidad.</li>
+						<li>Sientes que no eres suficientemente bueno.</li>
+						<li>¿Acabas de salir de la escuela y no sabes cómo colocarte?</li>
+						<li>No te contratan porque no tienes experiencia</li>
+
+					</ul>
+					<p>No busques más, en Re-empleate tenemos lo que necesitas para quedar en la posición ideal que buscas.</p>
+				</header>
+
+
+			</article>
 
 			<!-- Featured Post -->
 			<article class="post featured">
@@ -181,11 +207,11 @@
 			</blockquote>
 
 			<hr />
-				
+
 
 		</div>
 
-		
+
 		<!-- Footer -->
 		<footer id="footer">
 
